--- a/me2bert_example.ipynb
+++ b/me2bert_example.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/standard/.pyenv/versions/3.10.1/envs/bilaw/lib/python3.10/site-packages/huggingface_hub/file_download.py:1150: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -43,6 +51,13 @@
       "LOYALTY/BETRAYAL : 0.4824\n",
       "AUTHORITY/SUBVERSION : 0.96638\n",
       "PURITY/DEGRADATION : 0.02086\n",
+      "\n",
+      "Reality is merely an illusion, albeit a very persistent one.\n",
+      "CARE/HARM : 7e-05\n",
+      "FAIRNESS/CHEATING : 0.00029\n",
+      "LOYALTY/BETRAYAL : 0.00025\n",
+      "AUTHORITY/SUBVERSION : 0.00095\n",
+      "PURITY/DEGRADATION : 0.00014\n",
       "\n"
      ]
     }
@@ -58,7 +73,8 @@
     "     'The soul is healed by being with children.', \n",
     "     'I remembered how we had we had all come to Gatsby’s and guessed at his corruption… while he stood before us concealing an incorruptible dream…',\n",
     "     'All the variety, all the charm, all the beauty of life is made up of light and shadow, but justice must always remain clear and unbroken.',\n",
-    "     'When tyranny becomes law, rebellion becomes duty.']  \n",
+    "     'When tyranny becomes law, rebellion becomes duty.',\n",
+    "     'Reality is merely an illusion, albeit a very persistent one.']  \n",
     "     \n",
     "max_length = 256\n",
     "\n",
