--- a/me2bert_example.ipynb
+++ b/me2bert_example.ipynb
@@ -57,8 +57,7 @@
       "FAIRNESS/CHEATING : 0.00029\n",
       "LOYALTY/BETRAYAL : 0.00025\n",
       "AUTHORITY/SUBVERSION : 0.00095\n",
-      "PURITY/DEGRADATION : 0.00014\n",
-      "\n"
+      "PURITY/DEGRADATION : 0.00014\n"
      ]
     }
    ],
@@ -140,6 +139,7 @@
     "config.has_trans = True  \n",
     "\n",
     "model = AutoModel.from_pretrained(model_name, config=config, trust_remote_code=True)\n",
+    "model.eval()\n",
     "text = 'I am proud of my country.'\n",
     "inputs = tokenizer(\n",
     "    text,\n",
